refactor: port downloader pipeline to rust and remove presets

--- a/ui/index.html
+++ b/ui/index.html
@@ -20,17 +20,9 @@
           <p class="eyebrow">ALLAH+ PREMIUM PLUS</p>
           <h1>TONE3000 Smart Tone Studio</h1>
           <p class="subtitle">
-            Preset seç, anahtarları gir, tek tuşla AI analiz + model indirme akışını masaüstünden yönet.
+            Anahtarları gir, tone isteğini yaz, tek tuşla AI analiz + model indirme akışını masaüstünden yönet.
           </p>
         </header>
-
-        <section class="panel">
-          <div class="panel-top">
-            <h2>Preset Bank</h2>
-            <span class="pill" id="selectedPresetLabel">Preset: Seçilmedi</span>
-          </div>
-          <div id="presetGrid" class="preset-grid"></div>
-        </section>
 
         <section class="panel form-panel">
           <h2>Görev Konfigürasyonu</h2>
@@ -69,7 +61,7 @@
         <section class="glass panel status-panel">
           <div>
             <h2>Çalışma Durumu</h2>
-            <p id="statusText">Hazır. Bir preset seçip işlemi başlatabilirsin.</p>
+            <p id="statusText">Hazır. Tone isteğini girip işlemi başlatabilirsin.</p>
           </div>
           <span class="run-state idle" id="runState">Idle</span>
         </section>
